[gd_scene load_steps=9 format=3 uid="uid://durrqhifim6vy"]

[ext_resource type="Texture2D" uid="uid://dt1griii42lk2" path="res://assets/images/main_background.png" id="1_0y6hh"]
[ext_resource type="Script" uid="uid://bfoyfwaypdmsd" path="res://scenes/table/table.gd" id="2_vd5qv"]
[ext_resource type="PackedScene" uid="uid://idlktk5kcr8l" path="res://scenes/racket/racket.tscn" id="3_tg5vf"]
[ext_resource type="PackedScene" uid="uid://dhgyx4382kgn8" path="res://scenes/ball/ball.tscn" id="4_8xt64"]
[ext_resource type="FontFile" uid="uid://b8uf2gfndx8d2" path="res://assets/fonts/pixel_font.ttf" id="5_nfafe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bluut"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxfjs"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6q2rq"]
size = Vector2(64, 768)

[node name="Table" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_0y6hh")
centered = false
script = ExtResource("2_vd5qv")

[node name="LeftPlayer" parent="." instance=ExtResource("3_tg5vf")]
position = Vector2(50, 324)

[node name="RightPlayer" parent="." instance=ExtResource("3_tg5vf")]
position = Vector2(1082, 324)

[node name="Ball" parent="." instance=ExtResource("4_8xt64")]
position = Vector2(576, 324)
collision_mask = 3

[node name="Ricochet" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Ricochet"]
position = Vector2(576, -32)
shape = SubResource("RectangleShape2D_bluut")

[node name="Bottom" type="CollisionShape2D" parent="Ricochet"]
position = Vector2(576, 676)
shape = SubResource("RectangleShape2D_wxfjs")

[node name="LeftScore" type="Area2D" parent="."]

[node name="Area" type="CollisionShape2D" parent="LeftScore"]
position = Vector2(-32, 320)
shape = SubResource("RectangleShape2D_6q2rq")

[node name="RightScore" type="Area2D" parent="."]

[node name="Area" type="CollisionShape2D" parent="RightScore"]
position = Vector2(1184, 320)
shape = SubResource("RectangleShape2D_6q2rq")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="LeftScore" type="Label" parent="HUD"]
offset_left = 456.0
offset_top = 5.0
offset_right = 506.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("5_nfafe")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightScore" type="Label" parent="HUD"]
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("5_nfafe")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="LeftScore" to="." method="_on_left_score_body_entered"]
[connection signal="body_entered" from="RightScore" to="." method="_on_right_score_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
